--- a/components/molecules/layoutSearch/layoutSearch.module.scss
+++ b/components/molecules/layoutSearch/layoutSearch.module.scss
@@ -3,7 +3,7 @@
 .form {
   display: flex;
   align-items: center;
-  background-color: var(--bg-gray);
+  background-color: var(--bg-secondary);
   border-radius: var(--radius-small);
   box-shadow: var(--shadow-secondary);
   margin: 0.75rem 0;
