--- a/components/molecules/postOptions/postOptions.module.scss
+++ b/components/molecules/postOptions/postOptions.module.scss
@@ -1,5 +1,5 @@
 .dialog {
-  background-color: var(--bg-white);
+  background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   width: min(45rem, 80%);
   margin-inline: auto;
