--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: var(--bg-white);
+  background-color: var(--bg-primary);
   padding: 1rem 2rem;
   gap: 1rem;
   z-index: 2;
