--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -19,7 +19,7 @@
 .image {
   width: 100%;
   height: 100%;
-  background-color: var(--bg-white);
+  background-color: var(--bg-primary);
   border-radius: var(--radius-small);
   object-fit: contain;
   box-shadow: 0 6px 10px 1px rgb(0, 0, 0, 0.1);
