--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -5,13 +5,14 @@
   --size: 3rem;
   border-radius: 100%;
   min-width: 3rem;
-  box-shadow: 0 0 0 2px var(--color-secondary);
+  box-shadow: 0 0 0 2px var(--color-primary);
   width: var(--size);
   height: var(--size);
   font-size: var(--size);
 
 
   @include common.mediaquery('lg') {
+    margin-left: 0.25rem;
     --size: 3.5rem;
   }
 }
