--- a/components/atoms/tooltip/tooltip.module.scss
+++ b/components/atoms/tooltip/tooltip.module.scss
@@ -9,7 +9,7 @@
 .tip {
   display: none;
   position: absolute;
-  background-color: var(--bg-white);
+  background-color: var(--bg-primary);
   border-radius: var(--radius-small);
   box-shadow: var(--shadow-secondary);
   left: 50%;
@@ -44,7 +44,7 @@
   &::before {
     transform: translateY(3rem);
     filter: drop-shadow(0px 1px 0px var(--border-primary-color));
-    border-top-color: var(--bg-white);
+    border-top-color: var(--bg-primary);
   }
 }
 
@@ -54,19 +54,35 @@
   &::before {
     transform: translateY(-3rem);
     filter: drop-shadow(0px -1px 0px var(--border-primary-color));
-    border-bottom-color: var(--bg-white);
+    border-bottom-color: var(--bg-primary);
   }
 }
 
 .right {
   top: 50%;
   left: 5rem;
+  right: unset;
   transform: translateX(0) translateY(-50%);
 
   &::before {
     transform: translateX(-50%);
     left: 0;
     filter: drop-shadow(-1px 0px 0px var(--border-primary-color));
-    border-right-color: var(--bg-white);
+    border-right-color: var(--bg-primary);
+  }
+}
+
+.left {
+  top: 50%;
+  right: 0;
+  left: unset;
+  transform: translateX(0) translateY(-50%);
+
+  &::before {
+    left: unset;
+    right: -1rem;
+    transform: translateX(50%);
+    filter: drop-shadow(1px 0px 0px var(--border-primary-color));
+    border-left-color: var(--bg-primary);
   }
 }
