--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -3,31 +3,53 @@
 .comment {
   display: grid;
   grid-template-columns: 4.5rem 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 1fr auto;
   padding: 1rem;
+  row-gap: 1rem;
   column-gap: 0.25rem;
   place-content: center;
   border-bottom: var(--border-secondary);
 
+  &:last-child {
+    border: none;
+  }
+
+
   @include common.mediaquery('lg') {
+    padding: 1rem 0;
     column-gap: 1rem;
-    grid-template-columns: 6rem 1fr;
+    grid-template-columns: max-content 1fr;
   }
 }
 
+.link {
+  display: flex;
+  align-items: flex-start;
+}
+
 .avatar {
+  margin-top: 0.25rem;
   justify-self: center;
-  width: 3rem;
-  height: 3rem;
+}
+
+%font-size {
+  font-size: 1.5rem;
 
   @include common.mediaquery('lg') {
-    width: 4rem;
-    height: 4rem;
+    font-size: 2rem;
   }
 }
 
 .author {
   font-weight: 600;
+  display: inline;
+  @extend %font-size;
+}
+
+.content {
+  display: inline;
+  margin-left: 0.5rem;
+  @extend %font-size;
 }
 
 .commentText {
@@ -41,8 +63,7 @@
   background-color: transparent;
 
   @include common.mediaquery('lg') {
-    margin-left: 1.5rem;
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 }
 
@@ -50,7 +71,7 @@
   grid-column: 1 / 3;
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .likeBtn {
