--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -2,7 +2,7 @@
 
 .post {
   border-radius: var(--radius-medium);
-  background-color: var(--bg-white);
+  background-color: var(--bg-primary);
   box-shadow: var(--shadow-secondary);
 }
 
