--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -4,20 +4,31 @@
   position: relative;
   z-index: 1;
   width: min(70rem, 85%);
-  max-height: 70%;
-  background-color: var(--bg-white);
-  border: var(--border-primary);
-  box-shadow: var(--shadow-secondary);
+  background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
   margin: auto;
-  overflow: hidden;
+
+
+  @include common.mediaquery('xxl') {
+    height: 60rem;
+  }
 
   @include common.mediaquery('lg') {
-    padding-bottom: 3rem;
+    width: clamp(70rem, 70%, 105rem);
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 0.75fr;
+    column-gap: 2rem;
+  }
+}
+
+.postHeader {
+  @include common.mediaquery('lg') {
+    grid-column: 2 / 3;
   }
 }
 
@@ -25,12 +36,24 @@
   width: 0;
   height: 0;
   opacity: 0;
+  position: absolute;
 }
+
 
 .postImg {
   margin: auto;
   margin-bottom: 2rem;
   object-fit: contain;
+  background-color: var(--bg-black);
+
+  @include common.mediaquery('lg') {
+    grid-row: 1 / 3;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: var(--radius-medium);
+    border-bottom-left-radius: var(--radius-medium);
+  }
 }
 
 .comments {
@@ -39,15 +62,20 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin-top: 1rem;
 
   @include common.mediaquery('lg') {
-    margin-top: 3rem;
+    height: 100%;
+    margin-top: 1rem;
+    max-height: 60rem;
+    overflow-y: auto;
   }
 }
 
 .commentsContainer {
+  padding: 0 1rem;
+
   @include common.mediaquery('lg') {
-    margin: 0 5rem;
+    padding-right: 1rem;
+    margin-top: 1rem;
   }
 }
