--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,7 +37,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
   color: var(--text-primary);
 }
 
@@ -64,22 +64,23 @@ a {
 
 :root {
 
-  --color-primary: hsl(210, 60%, 50%);
-  --color-secondary: hsl(210, 60%, 65%);
-  --color-error: hsl(10, 60%, 50%);
-  --color-white: hsl(0, 100%, 100%);
-  --color-disabled: hsl(210, 50%, 40%);
-  --color-separator: hsl(210, 20%, 60%);
+  --color-primary: rgb(63, 114, 175);
+  --color-secondary: rgb(137, 170, 231);
+  --color-error: rgb(207, 60, 30);
+  --color-white: rgb(248, 246, 246);
+  --color-disabled: rgb(63, 114, 175, 0.9);
+  --color-separator: rgb(133, 153, 173);
 
-  --text-primary: hsl(0, 0%, 15%);
-  --text-placeholder: hsl(0, 1%, 29%);
+  --text-primary: rgb(17, 45, 78);
+  --text-secondary: rgb(64, 64, 64);
+  --text-placeholder: rgb(75, 73, 73);
 
-  --bg-white: hsl(0, 0%, 100%);
-  --bg-primary: hsl(0, 0%, 98%);
-  --bg-gray: hsl(0, 0%, 94%);
-  --bg-overlay: hsla(0, 0%, 0%, 0.67);
-  --border-primary-color: hsl(0, 0%, 79%);
-  --border-secondary-color: hsl(0, 0%, 86%);
+  --bg-primary: rgb(255, 255, 255);
+  --bg-secondary: rgb(249, 247, 247);
+  --bg-black: rgb(0, 0, 0);
+  --bg-overlay: rgba(0, 0, 0, 0.67);
+  --border-primary-color: rgb(201, 201, 201);
+  --border-secondary-color: rgb(219, 219, 219);
   --border-primary: 1px solid var(--border-primary-color);
   --border-secondary: 1px solid var(--border-secondary-color);
 
@@ -87,8 +88,8 @@ a {
   --radius-medium: 0.8rem;
 
 
-  --shadow-primary: 0 4px 10px 2px hsla(0, 0%, 0%, 0.15);
-  --shadow-secondary: 0 0 0 1px rgb(0 0 0 / 12%), 0 2px 4px rgb(0 0 0 / 5%), 0 12px 24px rgb(0 0 0 / 5%);
+  --shadow-primary: 0 4px 10px 2px rgba(0, 0, 0, 0.15);
+  --shadow-secondary: 0 0 0 1px rgb(0, 0, 0, 12%), 0 2px 4px rgb(0, 0, 0, 5%), 0 12px 24px rgb(0, 0, 0, 5%);
   --itemSize: 2.75rem;
 
   @include common.mediaquery('lg') {
