--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -52,7 +52,7 @@
   position: absolute;
   left: 1rem;
   top: -1.5rem;
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
   padding: 0 1rem;
 }
 
