refactor: layout hooks

--- a/components/molecules/input/input.module.scss
+++ b/components/molecules/input/input.module.scss
@@ -25,7 +25,7 @@
 
 .labelActive,
 .input:focus+.label {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
   color: var(--text-primary);
   top: -1.25rem;
   left: 0.5rem;
