--- a/components/organisms/signIn/signIn.module.scss
+++ b/components/organisms/signIn/signIn.module.scss
@@ -35,7 +35,7 @@
 }
 
 .orWith {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
   text-transform: uppercase;
   padding: 0 1rem;
   position: relative;
