--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -10,7 +10,7 @@
 .image {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   border-block: var(--border-secondary);
   background-color: var(--bg-primary);
 
