--- a/components/molecules/navbar/navbar.module.scss
+++ b/components/molecules/navbar/navbar.module.scss
@@ -9,7 +9,7 @@
   background-color: var(--bg-primary);
   bottom: 0;
   left: 0;
-  padding-top: 0.5rem;
+  padding: 0.75rem 0;
   border-top: var(--border-secondary);
   z-index: 1;
 
