--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -1,58 +1,51 @@
 .button {
-  background-color: var(--color-primary);
   border-radius: var(--radius-small);
-  padding: 0.75rem 1.5rem;
+  padding: 0.7rem 2.5rem;
+
+  background-color: var(--color-primary);
   color: var(--color-white);
-  font-weight: 600;
+  font-weight: 500;
   border: none;
-  text-transform: capitalize;
-  transition: all 150ms ease-in-out;
 
-  &:hover {
-    cursor: pointer;
-  }
+  transition: all 0.2s ease;
 
-  &:hover {
-    &:not(:disabled) {
-      --shadow-color: var(--color-primary);
-      box-shadow: inset 0 0 0 2px var(--shadow-color);
-      background-color: transparent;
-      color: var(--color-primary);
-    }
+
+  &::first-letter {
+    text-transform: uppercase;
   }
 
   &:focus {
-    outline-width: 2px;
-    outline-offset: 4px;
+    outline: none;
+    box-shadow: 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.65rem var(--color-primary);
   }
 
-
-  &:disabled {
-    background-color: var(--color-disabled);
-    opacity: 0.65;
-    cursor: not-allowed;
-  }
-
-}
-
-.button-secondary {
-  --shadow-color: var(--color-primary);
-  box-shadow: inset 0 0 0 2px var(--shadow-color);
-  background-color: transparent;
-  color: var(--color-primary);
-
-  &:hover {
-    &:not(:disabled) {
-      --shadow-color: var(--color-secondary);
-      background-color: var(--color-secondary);
-      color: var(--color-white);
-      transition: all 100ms ease-in-out;
-      border: none;
+  &:not(:disabled) {
+    &:hover {
+      transform: scale(1.05);
     }
   }
 
   &:disabled {
-    --shadow-color: var(--color-disabled);
-    color: var(--color-white);
+    background-color: var(--color-disabled);
+    opacity: 0.7;
+  }
+}
+
+.button-secondary {
+  @extend .button;
+
+  background-color: transparent;
+  color: var(--color-primary);
+
+
+  box-shadow: inset 0 0 0 2px var(--color-primary);
+
+  &:focus {
+    box-shadow: inset 0 0 0 2px var(--color-primary), 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.65rem var(--color-primary);
+  }
+
+  &:disabled {
+    background-color: transparent;
+    opacity: 0.6;
   }
 }
