--- a/components/molecules/input/input.module.scss
+++ b/components/molecules/input/input.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  border: 2px solid var(--color-primary);
+  border: 1px solid var(--color-primary);
   border-radius: var(--radius-small);
   position: relative;
 }
@@ -45,6 +45,11 @@
   background-color: transparent;
   border: none;
   padding: 1rem;
+
+  &:focus {
+    outline: none;
+    box-shadow: var(--shadow-focus-secondary);
+  }
 }
 
 .error {
@@ -64,4 +69,6 @@
   max-width: calc(100% - 1px);
   font-size: 2rem;
   resize: vertical;
+
+
 }
