--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -77,6 +77,7 @@ a {
 
   --bg-primary: rgb(255, 255, 255);
   --bg-secondary: rgb(249, 247, 247);
+  --bg-gray: rgb(236, 236, 243);
   --bg-black: rgb(0, 0, 0);
   --bg-overlay: rgba(0, 0, 0, 0.67);
   --border-primary-color: rgb(201, 201, 201);
@@ -90,6 +91,8 @@ a {
 
   --shadow-primary: 0 4px 10px 2px rgba(0, 0, 0, 0.15);
   --shadow-secondary: 0 0 0 1px rgb(0, 0, 0, 12%), 0 2px 4px rgb(0, 0, 0, 5%), 0 12px 24px rgb(0, 0, 0, 5%);
+  --shadow-focus: inset 0 0 0 2px var(--color-primary);
+  --shadow-focus-secondary: inset 0 0 0 2px var(--color-secondary);
   --itemSize: 2.75rem;
 
   @include common.mediaquery('lg') {
