feat(animations): edit page

--- a/components/pages/editAccount/editAccount.module.scss
+++ b/components/pages/editAccount/editAccount.module.scss
@@ -1,3 +1,5 @@
+@use '/styles/common.scss';
+
 .container {
   width: min(80rem, 80vw);
   margin: auto;
@@ -9,9 +11,28 @@
 .form {
   display: grid;
   gap: 2rem;
+
+  @include common.mediaquery('lg') {
+    gap: 3rem;
+  }
 }
 
 .buttons {
   display: flex;
   justify-content: space-between;
+}
+
+.stageContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  @include common.mediaquery('lg') {
+    gap: 3rem;
+  }
+}
+
+.buttonsLastStage {
+  display: flex;
+  gap: 3rem;
 }
