--- a/components/atoms/modal/modal.module.scss
+++ b/components/atoms/modal/modal.module.scss
@@ -22,6 +22,8 @@
     padding: 2rem 0;
     padding-left: 4rem;
     font-size: 2.5rem;
+
+
   }
 }
 
@@ -33,6 +35,7 @@
 
 .link {
   @extend %itemFlex;
+  display: inline-flex
 }
 
 .itemButton {
@@ -46,6 +49,10 @@
   @include common.mediaquery('lg') {
     gap: 2rem;
     font-size: 2.5rem;
+
+    >svg {
+      transform: scale(1.3);
+    }
   }
 
   &:not(:disabled) {
