--- a/components/atoms/navAccountButton/navAccountButton.module.scss
+++ b/components/atoms/navAccountButton/navAccountButton.module.scss
@@ -4,67 +4,47 @@
   background-color: var(--bg-primary);
   position: absolute;
   box-shadow: var(--shadow-secondary);
-  top: -16rem;
-  left: -11.5rem;
+  top: -15.5rem;
+  left: -13.5rem;
   border-radius: var(--radius-small);
   min-width: 20rem;
 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
   font-size: 2rem;
+  gap: 2rem;
+  padding: 1rem 0;
+  padding-left: 2rem;
 
   @include common.mediaquery('lg') {
-    top: 5rem;
-    left: -8.2rem;
+    top: 4.5rem;
+    left: -14rem;
   }
 }
 
-.square {
-  position: absolute;
-  bottom: -10px;
-  right: 0;
-  margin: 0 auto;
-  width: 0;
-  height: 0;
-  border: 1rem solid transparent;
-  border-bottom: 1rem solid var(--bg-primary);
-  filter: drop-shadow(0 -1px 0 var(--border-primary-color));
-
-
-  @include common.mediaquery('lg') {
-    top: -2rem;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-}
 
 .link {
   display: flex;
   justify-content: flex-start;
-  gap: 1rem;
   align-items: center;
-  width: 100%;
+  gap: 1.5rem;
   margin: 0;
-  padding: 1rem 2rem;
-  border-top: var(--border-primary);
   text-transform: capitalize;
 }
 
 .signOut {
   border: none;
   background-color: transparent;
-  border-top: var(--border-primary);
-  width: 100%;
-  padding: 1rem 0;
   cursor: pointer;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
 }
 
 .welcome {
   font-weight: 600;
-  padding: 1rem 0;
 }
 
 .button {
