--- a/components/molecules/input/input.module.scss
+++ b/components/molecules/input/input.module.scss
@@ -3,9 +3,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  border: 1px solid var(--color-primary);
-  border-radius: var(--radius-small);
   position: relative;
+  gap: 0.5rem;
 }
 
 .containerError {
@@ -13,50 +12,38 @@
 }
 
 .label {
-  position: absolute;
-  left: 0rem;
-  top: 0;
-  padding: 0 1rem;
-  color: var(--text-placeholder);
-  transition: all 100ms ease-out;
-  cursor: text;
-  transition-property: background-color, transform, font-size;
+  color: var(--text-secondary);
+  text-transform: capitalize;
+  font-size: 2rem;
 }
 
-.labelActive,
-.input:focus+.label {
-  background-color: var(--bg-secondary);
-  color: var(--text-primary);
-  top: -1.25rem;
-  left: 0.5rem;
-
-
-  @include common.mediaquery('lg') {
-    font-size: 2.5rem;
-  }
-
-  @include common.mediaquery('xl') {
-    top: -2rem;
-    left: 1rem;
-  }
-}
 
 .input {
   background-color: transparent;
   border: none;
   padding: 1rem;
+  border: var(--border-primary);
+  border-radius: var(--radius-small);
+  transition: all 0.2s ease-out;
+  box-shadow: var(--shadow-secondary);
 
   &:focus {
     outline: none;
-    box-shadow: var(--shadow-focus-secondary);
+    border-color: var(--color-primary);
+    box-shadow: var(--shadow-focus);
   }
 }
+
+.inputError {
+  background-color: var(--bg-error);
+  border-color: var(--color-error);
+}
+
 
 .error {
   color: var(--color-error);
   font-weight: 600;
   font-size: 1.5rem;
-  margin-left: 1rem;
 
   @include common.mediaquery('lg') {
     font-size: 2rem;
