--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -1,13 +1,17 @@
 @use '/styles/common.scss';
 
+.container {
+  max-width: 100rem;
+  margin-inline: auto;
+}
+
 .account {
   display: grid;
   grid-template-columns: 1fr 2fr;
   position: relative;
 
   @include common.mediaquery('lg') {
-    grid-template-columns: 1.5fr 3fr 1fr;
-    margin: 0 10rem;
+    grid-template-columns: 1fr 3fr 0.5fr;
   }
 
 }
@@ -23,8 +27,9 @@ img.avatar {
     width: var(--account-avatar-size);
     height: var(--account-avatar-size);
 
-    justify-self: center;
+    justify-self: flex-start;
     grid-row: 1 / 4;
+
     margin-top: 2rem;
   }
 }
@@ -83,17 +88,24 @@ img.avatar {
 }
 
 .username {
-  font-weight: 400;
+  font-size: 3.5rem;
+  font-weight: 700;
   grid-column: 2 / 3;
+
+  &::before {
+    content: '@';
+  }
 }
 
 .name {
-  margin-top: 2rem;
+  margin-top: 1rem;
   font-weight: 600;
   grid-column: 1 / 3;
+  margin-left: 1rem;
 
   @include common.mediaquery('lg') {
     margin-top: 0;
+    margin-left: 0;
     font-size: 2rem;
     line-height: 1.5em;
     grid-column: 2 / 3;
@@ -104,8 +116,10 @@ img.avatar {
 .bio {
   color: var(--text-secondary);
   grid-column: 1 / 3;
+  margin-left: 1rem;
 
   @include common.mediaquery('lg') {
+    margin-left: 0;
     font-size: 2rem;
     grid-column: 2 / 3;
     grid-row: 4 / 5;
@@ -137,15 +151,15 @@ img.avatar {
   position: absolute;
   font-size: 2.5rem;
   right: 1rem;
-  top: 0.5rem;
+  top: 0;
   cursor: pointer;
 
   @include common.mediaquery('lg') {
     place-self: center;
     position: static;
     font-size: 3rem;
-    transform: translateX(-2rem) translateY(-7rem);
-    grid-row: 2/3;
+    grid-row: 1/2;
+    grid-column: 3 / 4;
   }
 }
 
