--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -1,18 +1,28 @@
 @use '/styles/common.scss';
 
-.avatar {
+.avatarContainer {
+  min-width: 3rem;
+  min-height: 3rem;
+}
 
-  --size: 3rem;
+.avatar {
   border-radius: 100%;
-  min-width: var(--size);
   box-shadow: 0 0 0 2px var(--color-primary);
-  width: var(--size);
-  height: var(--size);
   font-size: var(--size);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
 
   @include common.mediaquery('lg') {
     margin-left: 0.25rem;
-    --size: 3.5rem;
   }
+}
+
+.icon {
+  border-radius: 100%;
+  box-shadow: 0 0 0 2px var(--color-primary);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
