--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -14,6 +14,8 @@
     column-gap: 1rem;
     grid-template-columns: max-content 1fr;
   }
+
+  border-bottom: var(--border-primary);
 }
 
 .link {
@@ -21,9 +23,17 @@
   align-items: flex-start;
 }
 
+.avatarContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .avatar {
-  margin-top: 0.25rem;
   justify-self: center;
+  margin-top: 0.25rem;
+  width: 3rem;
+  height: 3rem;
 }
 
 %font-size {
@@ -76,4 +86,9 @@
   background-color: transparent;
   align-items: center;
   cursor: pointer;
+
+  >svg {
+    width: 2rem;
+    height: 2rem;
+  }
 }
