--- a/components/atoms/modal/modal.module.scss
+++ b/components/atoms/modal/modal.module.scss
@@ -23,8 +23,6 @@
     padding: 2rem 0;
     padding-left: 4rem;
     font-size: 2.5rem;
-
-
   }
 }
 
@@ -69,7 +67,7 @@
 
 .closeButton {
   position: absolute;
-  right: -1rem;
+  right: 1rem;
   top: -6rem;
   font-size: 4rem;
   background-color: transparent;
@@ -80,6 +78,10 @@
 
   &:hover {
     color: var(--color-primary);
+  }
+
+  @include common.mediaquery('lg') {
+    right: -1rem;
   }
 }
 
@@ -103,9 +105,16 @@
 .dialog {
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
-  width: min(45rem, 80%);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  width: min(45rem, 100%);
   margin-inline: auto;
   position: relative;
+
+  @include common.mediaquery('lg') {
+    border-radius: var(--radius-medium);
+
+  }
 }
 
 .overlay {
@@ -116,7 +125,12 @@
   right: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   background-color: var(--bg-overlay);
   z-index: 1;
+
+  @include common.mediaquery('lg') {
+    justify-content: center;
+    align-items: center;
+  }
 }
