--- a/components/pages/editAccount/editAccount.module.scss
+++ b/components/pages/editAccount/editAccount.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding-bottom: 10rem;
 }
 
 .form {
@@ -17,10 +18,7 @@
   }
 }
 
-.buttons {
-  display: flex;
-  justify-content: space-between;
-}
+
 
 .avatarButtons {
   display: grid;
@@ -50,7 +48,23 @@
   }
 }
 
+.buttons {
+  display: grid;
+  gap: 3rem;
+
+  @include common.mediaquery('lg') {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+
 .buttonsLastStage {
   display: flex;
-  gap: 3rem;
+  justify-content: space-between;
+
+  @include common.mediaquery('lg') {
+    gap: 3rem;
+    justify-content: flex-start;
+  }
 }
