feat: multiple images in post

--- a/components/molecules/cropImage/cropImage.module.scss
+++ b/components/molecules/cropImage/cropImage.module.scss
@@ -7,6 +7,11 @@
   justify-content: center;
   align-items: center;
   justify-self: center;
+  max-width: 70rem;
+
+  @include common.mediaquery('lg') {
+    margin: 3rem 0;
+  }
 }
 
 .cropContainer {
@@ -20,4 +25,9 @@
     flex-direction: row;
     justify-content: space-between;
   }
+}
+
+.saveCrop {
+  width: 80%;
+  margin: 0 auto;
 }
