--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -5,6 +5,7 @@
   background-color: var(--bg-primary);
   position: relative;
   box-shadow: var(--shadow-secondary);
+  width: var(--postWidth);
 }
 
 img.imageLoading {
