--- a/components/molecules/cropImage/cropImage.module.scss
+++ b/components/molecules/cropImage/cropImage.module.scss
@@ -10,7 +10,7 @@
   max-width: 70rem;
 
   @include common.mediaquery('lg') {
-    margin: 3rem 0;
+    margin: 3rem auto;
   }
 }
 
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
 
   @include common.mediaquery('lg') {
     gap: 0;
@@ -27,7 +28,16 @@
   }
 }
 
-.saveCrop {
-  width: 80%;
-  margin: 0 auto;
+
+
+.buttons {
+  display: grid;
+  gap: 2rem;
+  grid-template-rows: repeat(2, 1fr);
+
+  @include common.mediaquery('lg') {
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 7rem;
+  }
 }
