--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -5,12 +5,13 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   place-content: center;
-  background-color: var(--bg-primary);
+  background-color: rgb(255, 255, 255, 0.77);
+  backdrop-filter: blur(18px);
   border-bottom: var(--border-secondary);
   padding: 0 2rem;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   @include common.mediaquery('sm') {
     padding: 0.5rem calc(2rem + 10vw);
