feat: multiple images in post (#35)
- Added account edit page
- Added ability to add multiple images in post
- Added image slider in homepage post
- Refactored some styles

--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -3,6 +3,7 @@
 .createPost {
   display: grid;
   row-gap: 4rem;
+  padding-bottom: 6rem;
 
   @include common.mediaquery('lg') {
     margin-inline: calc(2rem + 4vw);
