--- a/components/molecules/cropImage/cropImage.module.scss
+++ b/components/molecules/cropImage/cropImage.module.scss
@@ -7,6 +7,11 @@
   justify-content: center;
   align-items: center;
   justify-self: center;
+  max-width: 70rem;
+
+  @include common.mediaquery('lg') {
+    margin: 3rem auto;
+  }
 }
 
 .cropContainer {
@@ -14,10 +19,25 @@
   flex-direction: column;
   gap: 2rem;
 
+
   @include common.mediaquery('lg') {
     gap: 0;
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+  }
+}
+
+
+
+.buttons {
+  display: grid;
+  gap: 2rem;
+  grid-template-rows: repeat(2, 1fr);
+
+  @include common.mediaquery('lg') {
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 7rem;
   }
 }
