--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -3,26 +3,32 @@
 .container {
   position: relative;
   z-index: 1;
-  width: min(70rem, 85%);
+  width: min(60rem, 95%);
   background-color: var(--bg-primary);
-  border-radius: var(--radius-medium);
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
-  margin: auto;
+  border-radius: var(--radius-small);
 
+  @include common.mediaquery('lg') {
+    width: min(80rem, 80%);
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: auto 1fr;
+    column-gap: 2rem;
+    margin: auto;
+    border-radius: var(--radius-medium);
+  }
+
+  @include common.mediaquery('xl') {
+    width: min(100rem, 80%);
+    grid-template-columns: 60rem 1fr;
+
+  }
 
   @include common.mediaquery('xxl') {
     height: 60rem;
-  }
-
-  @include common.mediaquery('lg') {
-    width: clamp(70rem, 70%, 105rem);
-    display: grid;
-    grid-template-rows: auto 1fr;
-    grid-template-columns: 1fr 0.75fr;
-    column-gap: 2rem;
   }
 }
 
@@ -57,7 +63,7 @@
 }
 
 .comments {
-  height: 15rem;
+  height: 20rem;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -78,4 +84,16 @@
     padding-right: 1rem;
     margin-top: 1rem;
   }
+}
+
+.slider {
+  grid-row: 1 / 3;
+  position: relative;
+  width: 100%;
+}
+
+.sliderImage {
+  z-index: 2;
+
+  @include common.mediaquery('lg') {}
 }
