--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -1,20 +1,20 @@
 @use '/styles/common.scss';
 
 .imagesContainer {
-  overflow: hidden;
   position: relative;
+  display: flex;
+
+  &:hover {
+    cursor: grab;
+  }
 }
 
 .slider {
   display: flex;
   align-items: center;
-  justify-content: center;
   min-height: 30rem;
   position: relative;
-
-  &:hover {
-    cursor: grab;
-  }
+  overflow: hidden;
 }
 
 .sliderImage {
