--- a/components/organisms/header/header.module.scss
+++ b/components/organisms/header/header.module.scss
@@ -5,8 +5,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   place-content: center;
-  background-color: rgb(255, 255, 255, 0.77);
-  backdrop-filter: blur(18px);
+
   border-bottom: var(--border-secondary);
   padding: 0 2rem;
   position: sticky;
@@ -23,6 +22,17 @@
 
   @include common.mediaquery('xl') {
     padding: 0 calc(5rem + 15vw);
+  }
+
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    background-color: var(--bg-blur);
+    backdrop-filter: var(--backdrop-blur);
   }
 }
 
