--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -6,7 +6,7 @@
   font-weight: 500;
   border: none;
   transition: all 0.2s ease;
-
+  cursor: pointer;
 
   &::first-letter {
     text-transform: uppercase;
@@ -31,11 +31,8 @@
 
 .button-secondary {
   @extend .button;
-
   background-color: transparent;
   color: var(--color-primary);
-
-
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
   &:focus {
