--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -76,6 +76,7 @@
   transition: all 0.2s ease;
   z-index: 1;
   pointer-events: all;
+  cursor: pointer;
 
   &::first-letter {
     text-transform: uppercase;
