--- a/components/molecules/imagesPreview/imagesPreview.module.scss
+++ b/components/molecules/imagesPreview/imagesPreview.module.scss
@@ -4,10 +4,12 @@
   display: grid;
   place-content: center;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 2rem;
+  margin-top: 2rem;
+
 
   @include common.mediaquery('lg') {
-    gap: 10rem;
+    gap: 12rem;
   }
 }
 
@@ -16,7 +18,6 @@
   background-color: transparent;
   display: flex;
   border-radius: var(--radius-small);
-  overflow: hidden;
   box-shadow: var(--shadow-secondary);
   justify-content: center;
   align-items: center;
@@ -43,7 +44,7 @@
   justify-content: center;
   align-items: center;
   filter: opacity(0.5);
-  min-height: 12rem;
+  min-height: 10rem;
 
 
   >svg {
@@ -52,24 +53,36 @@
   }
 }
 
-.deleteIconOverlay {
-  opacity: 0;
+.deleteIcon {
   position: absolute;
-  left: 0;
-  top: 0;
-  background-color: var(--color-primary);
-  width: 100%;
-  height: 100%;
+  right: -0.75rem;
+  top: -1rem;
+  background-color: var(--color-secondary);
+  border-radius: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--color-white);
-  transition: all 0.2s ease;
-
+  color: var(--text-primary);
+  padding: 0.5rem;
+  border: none;
+  cursor: pointer;
 
   >svg {
-    width: 6rem;
-    height: 6rem;
+    stroke-width: 3;
+    width: 3rem;
+    height: 3rem;
   }
+
+  @include common.mediaquery('lg') {
+
+    right: -1.5rem;
+    top: -1.5rem;
+
+    >svg {
+      width: 4rem;
+      height: 4rem;
+    }
+  }
+
 }
