--- a/components/organisms/signIn/signIn.module.scss
+++ b/components/organisms/signIn/signIn.module.scss
@@ -63,9 +63,16 @@
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
+
+
+  >svg {
+    stroke-width: 3;
+    width: 2.5rem;
+    height: 2.5rem;
+  }
 }
 
 .google {
   font-weight: 600;
-  margin-left: 1rem;
+  margin-left: 0.75rem;
 }
