--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -148,6 +148,7 @@
   align-items: center;
   grid-column: 3 / 5;
   grid-row: 1 / 1;
+  cursor: pointer;
 
   @include common.mediaquery('lg') {
     place-self: center;
