--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -74,6 +74,15 @@
 
 .listItemNumber {
   font-weight: 600;
+  font-size: 2rem;
+}
+
+.listItemText {
+  color: var(--text-secondary);
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
 }
 
 .username {
@@ -139,6 +148,7 @@
   align-items: center;
   grid-column: 3 / 5;
   grid-row: 1 / 1;
+  cursor: pointer;
 
   @include common.mediaquery('lg') {
     place-self: center;
