--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   z-index: 1;
-  width: min(60rem, 95%);
+  width: min(60rem, 90%);
   background-color: var(--bg-primary);
   left: 0;
   right: 0;
@@ -12,18 +12,18 @@
   border-radius: var(--radius-small);
 
   @include common.mediaquery('lg') {
-    width: min(80rem, 80%);
+    width: min(85rem, 80%);
     display: grid;
     grid-template-rows: auto 1fr;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 50rem 1fr;
     column-gap: 2rem;
     margin: auto;
     border-radius: var(--radius-medium);
   }
 
   @include common.mediaquery('xl') {
-    width: min(100rem, 80%);
-    grid-template-columns: 60rem 1fr;
+    width: min(120rem, 80%);
+    grid-template-columns: 70rem 1fr;
 
   }
 
@@ -63,7 +63,7 @@
 }
 
 .comments {
-  height: 20rem;
+  height: 25rem;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -90,8 +90,26 @@
   grid-row: 1 / 3;
   position: relative;
   width: 100%;
+  display: none;
+
+  @include common.mediaquery('lg') {
+    display: unset;
+    height: 100%;
+  }
 }
 
 .sliderImage {
   z-index: 2;
+
+  @include common.mediaquery('lg') {
+    border-radius: var(--radius-medium);
+    max-width: 70rem;
+    margin: 0 2rem;
+    height: 100%;
+  }
+
+  @include common.mediaquery('xl') {
+    margin: 0 10rem;
+    height: auto;
+  }
 }
