--- a/components/atoms/postPlaceholder/postPlaceholder.module.scss
+++ b/components/atoms/postPlaceholder/postPlaceholder.module.scss
@@ -5,6 +5,7 @@
   border-radius: var(--radius-medium);
   opacity: 0.5;
   animation: skeleton-loading 1s linear infinite alternate;
+  box-shadow: var(--shadow-secondary);
 }
 
 @keyframes skeleton-loading {
